RESOLVED FIXED67362
Define PTHREAD_KEYS_MAX to fix Android port build
https://bugs.webkit.org/show_bug.cgi?id=67362
Summary Define PTHREAD_KEYS_MAX to fix Android port build
Hao Zheng
Reported 2011-08-31 23:06:04 PDT
PTHREAD_KEYS_MAX is not defined in bionic, so explicitly define it here.
Attachments
Proposed patch. (996 bytes, patch)
2011-08-31 23:18 PDT, Hao Zheng
abarth: review+
abarth: commit-queue-
Proposed patch 2. (1.19 KB, patch)
2011-09-01 00:07 PDT, Hao Zheng
no flags
Hao Zheng
Comment 1 2011-08-31 23:18:31 PDT
Created attachment 105897 [details] Proposed patch.
Adam Barth
Comment 2 2011-08-31 23:21:29 PDT
Comment on attachment 105897 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=105897&action=review > Source/JavaScriptCore/ChangeLog:8 > + Define PTHREAD_KEYS_MAX to fix Android port build. > + https://bugs.webkit.org/show_bug.cgi?id=67362 > + > + Reviewed by NOBODY (OOPS!). > + > + * wtf/ThreadIdentifierDataPthreads.cpp: It would be good to include the information from the bug about this being a missing feature of bionic in the ChangeLog.
Hao Zheng
Comment 3 2011-09-01 00:07:46 PDT
Created attachment 105906 [details] Proposed patch 2.
Hao Zheng
Comment 4 2011-09-01 02:31:31 PDT
Sorry, one correction: It's not for Android port, which no longer exists. It's for Chromium port for Android. And one clarification: it's not a build fix for the bot, but it's required when Chromium for Android starts using the code.
WebKit Review Bot
Comment 5 2011-09-01 02:39:53 PDT
Comment on attachment 105906 [details] Proposed patch 2. Clearing flags on attachment: 105906 Committed r94281: <http://trac.webkit.org/changeset/94281>
WebKit Review Bot
Comment 6 2011-09-01 02:39:58 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2011-09-01 10:18:05 PDT
Comment on attachment 105906 [details] Proposed patch 2. View in context: https://bugs.webkit.org/attachment.cgi?id=105906&action=review > Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp:40 > +// PTHREAD_KEYS_MAX is not defined in bionic, so explicitly define it here. Are you tracking this as a bug? It would help to have a link to that bug in a comment, so that we would know when it's safe to remove the workaround.
Hao Zheng
Comment 8 2011-09-01 21:28:53 PDT
Note You need to log in before you can comment on or make changes to this bug.