Define PTHREAD_KEYS_MAX to fix Android port build. https://bugs.webkit.org/show_bug.cgi?id=67362

Patch by Hao Zheng <zhenghao@chromium.org> on 2011-09-01
Reviewed by Adam Barth.

PTHREAD_KEYS_MAX is not defined in bionic, so explicitly define it.

* wtf/ThreadIdentifierDataPthreads.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@94281 bbb929c8-8fbe-4397-9dbb-9b2b20218538