third_party/WebKit/Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp
@@ -37,7 +37,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Threading.h"
 
+#if OS(ANDROID)
+// PTHREAD_KEYS_MAX is not defined in bionic, so explicitly define it here.
+#define PTHREAD_KEYS_MAX 1024
+#else
 #include <limits.h>
+#endif
 
 namespace WTF {
 
@@ -88,4 +93,3 @@ void ThreadIdentifierData::destruct(void* data)
 } // namespace WTF
 
 #endif // USE(PTHREADS)
-
